@@ -1,23 +1,22 @@
 package ru.yandex.practicum.filmorate.service;
 
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.stereotype.Service;
 import ru.yandex.practicum.filmorate.exception.NotFoundException;
 import ru.yandex.practicum.filmorate.exception.ValidationException;
 import ru.yandex.practicum.filmorate.model.Film;
-import ru.yandex.practicum.filmorate.model.User;
+import ru.yandex.practicum.filmorate.model.Genre;
+import ru.yandex.practicum.filmorate.model.Mpa;
+import ru.yandex.practicum.filmorate.storage.film.FilmDbStorage;
 import ru.yandex.practicum.filmorate.storage.film.FilmStorage;
 import ru.yandex.practicum.filmorate.storage.user.UserStorage;
 
 import java.time.LocalDate;
-import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Slf4j
-@RequiredArgsConstructor
 public class FilmService {
 
     private static final LocalDate CINEMA_BIRTHDAY = LocalDate.of(1895, 12, 28);
@@ -25,6 +24,12 @@ public class FilmService {
 
     private final FilmStorage filmStorage;
     private final UserStorage userStorage;
+
+    public FilmService(@Qualifier("filmDbStorage") FilmStorage filmStorage,
+                       @Qualifier("userDbStorage") UserStorage userStorage) {
+        this.filmStorage = filmStorage;
+        this.userStorage = userStorage;
+    }
 
     public Film create(Film film) {
         validateFilm(film);
@@ -57,14 +62,21 @@ public class FilmService {
 
     public void addLike(Long filmId, Long userId) {
         Film film = getById(filmId);
-        User user = userStorage.getById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь с id = " + userId + " не найден"));
+
+        if (!userStorage.contains(userId)) {
+            throw new NotFoundException("Пользователь с id = " + userId + " не найден");
+        }
 
         if (film.getLikes().contains(userId)) {
             throw new ValidationException("Пользователь уже поставил лайк этому фильму");
         }
 
-        film.getLikes().add(userId);
+        if (filmStorage instanceof FilmDbStorage) {
+            ((FilmDbStorage) filmStorage).addLike(filmId, userId);
+        } else {
+            film.getLikes().add(userId);
+        }
+
         log.info("Пользователь {} поставил лайк фильму {}", userId, filmId);
     }
 
@@ -79,18 +91,66 @@ public class FilmService {
             throw new ValidationException("Пользователь не ставил лайк этому фильму");
         }
 
-        film.getLikes().remove(userId);
+        if (filmStorage instanceof FilmDbStorage) {
+            ((FilmDbStorage) filmStorage).removeLike(filmId, userId);
+        } else {
+            film.getLikes().remove(userId);
+        }
+
         log.info("Пользователь {} удалил лайк с фильма {}", userId, filmId);
     }
 
     public List<Film> getPopularFilms(int count) {
+        if (filmStorage instanceof FilmDbStorage) {
+            return ((FilmDbStorage) filmStorage).getPopularFilms(count);
+        }
+
         return filmStorage.getAll().stream()
-                .sorted(Comparator.comparingInt((Film f) -> f.getLikes().size()).reversed())
+                .sorted((f1, f2) -> Integer.compare(f2.getLikes().size(), f1.getLikes().size()))
                 .limit(count)
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public List<Genre> getAllGenres() {
+        if (filmStorage instanceof FilmDbStorage) {
+            return ((FilmDbStorage) filmStorage).getAllGenres();
+        }
+        return List.of();
+    }
+
+    public Genre getGenreById(Long id) {
+        if (filmStorage instanceof FilmDbStorage) {
+            Genre genre = ((FilmDbStorage) filmStorage).getGenreById(id);
+            if (genre == null) {
+                throw new NotFoundException("Жанр с id = " + id + " не найден");
+            }
+            return genre;
+        }
+        throw new NotFoundException("Жанр с id = " + id + " не найден");
+    }
+
+    public List<Mpa> getAllMpas() {
+        if (filmStorage instanceof FilmDbStorage) {
+            return ((FilmDbStorage) filmStorage).getAllMpas();
+        }
+        return List.of();
+    }
+
+    public Mpa getMpaById(Long id) {
+        if (filmStorage instanceof FilmDbStorage) {
+            try {
+                return ((FilmDbStorage) filmStorage).getMpaById(id);
+            } catch (NotFoundException e) {
+                throw e;
+            } catch (Exception e) {
+                throw new NotFoundException("Рейтинг MPA с id = " + id + " не найден");
+            }
+        }
+        throw new NotFoundException("Рейтинг MPA с id = " + id + " не найден");
     }
 
     private void validateFilm(Film film) {
+
         if (film.getName() == null || film.getName().isBlank()) {
             throw new ValidationException("Название фильма не может быть пустым");
         }
@@ -105,6 +165,28 @@ public class FilmService {
 
         if (film.getDuration() <= 0) {
             throw new ValidationException("Продолжительность фильма должна быть положительным числом");
+        }
+
+        if (film.getMpa() == null || film.getMpa().getId() == null) {
+            throw new ValidationException("Рейтинг MPA не может быть null");
+        }
+        try {
+            getMpaById(film.getMpa().getId());
+        } catch (NotFoundException e) {
+            throw new NotFoundException("Рейтинг MPA с id = " + film.getMpa().getId() + " не найден");
+        }
+
+        if (film.getGenres() != null && !film.getGenres().isEmpty()) {
+            for (Genre genre : film.getGenres()) {
+                if (genre.getId() == null) {
+                    throw new ValidationException("ID жанра не может быть null");
+                }
+                try {
+                    getGenreById(genre.getId());
+                } catch (NotFoundException e) {
+                    throw new NotFoundException("Жанр с id = " + genre.getId() + " не найден");
+                }
+            }
         }
     }
 }
